# in-network

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PLANS.md  README.md  REVIEWING.md  docker-compose.yml  package-lock.json  package.json
apps/agent/: Dockerfile  Dockerfile.dev  log_config.json  pyproject.toml
apps/agent/app/: llm.py  main.py  schemas.py
apps/agent/app/agents/: browser_use.py
apps/agent/test/: test_doorway.py
apps/api/: Dockerfile  Dockerfile.dev  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.ts  index.ts  seed.ts
apps/api/src/db/: client.ts  schema.ts
apps/api/src/lib/: agent.ts  errors.ts  explore.ts  llm.ts  npi.ts  page.ts  prompt.ts  providers.ts  runs.ts  verification.ts
apps/api/src/match/: carrier.ts  core.ts  index.ts  plan.ts  provider.ts
apps/api/src/routes/: carriers.ts  plans.ts  providers.ts  transcripts.ts  verify.ts
apps/api/src/transcripts/: analysis.ts  anomaly.ts  classify.ts  ingest.ts  parse.ts  title.ts
apps/api/test/: analysis.test.ts  anomaly.test.ts  carriers.test.ts  explore.test.ts  global-setup.ts  helpers.ts  parse.test.ts  plans.test.ts  providers.test.ts  providers_npi.test.ts  route.test.ts  runs.test.ts  transcripts.test.ts  verification.test.ts
apps/api/test/match/: core.test.ts
apps/web/: Dockerfile.dev  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/web/app/: Transcript.tsx  Transcripts.tsx  index.tsx
mcp/: package.json
mcp/src/: api.ts  index.ts  server.ts  state.ts
mcp/test/: api.test.ts  gating.test.ts  state.test.ts
(+27 files in other folders)
