[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "browser-use>=0.13.4",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "playwright>=1.60.0",
]

[dependency-groups]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
